# AI-Mandatory-I

./: Main.ipynb  app.py  pyproject.toml  pyvenv.cfg
Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
